--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Project explains all Node JS examples",
   "main": "app.js",
   "publishConfig": {
-    "registry": "http://65.1.136.200:8081/repository/nodejs123/"
+    "registry": "http://65.1.136.200:8081/repository/nodejs123/",
   },
   "scripts": {
     "server": "http-server -c-1 -p 9999",
